# sawyer_robot_openrave

./: CHANGELOG.rst  README.rst
sawyer_description_openrave/: CMakeLists.txt  package.xml
sawyer_description_openrave/launch/: aj_bullet_full_sawyer.launch  aj_bullet_sawyer_arm.launch  real_sawyer_arm_only_description.launch  real_sawyer_with_gripper.launch  test_baxter_arm_only_description.launch  test_fred_sawyer_description.launch  test_julian_sawyer_arm.launch  test_real_sawyer_description.launch  test_zero_right_hand_link.launch
sawyer_description_openrave/meshes/sawyer_mp1/: l6.DAE
sawyer_description_openrave/meshes/sawyer_mp3/: l0.DAE  l1.DAE
sawyer_description_openrave/meshes/sawyer_pv/: base.DAE  head.DAE  l2.DAE  l3.DAE  l5.DAE
sawyer_description_openrave/urdf/: baxter_arm.accurate.right.dae  baxter_right_arm_only.srdf  build_real_sawyer_arm_ik.py  build_real_sawyer_ik.py  fred_sawyer.py  ikfastdemo.cpp  make_baxter_ik.py  make_real_sawyer_arm_ik.py  make_real_sawyer_ik.py  make_sawyer_ik.py  real_sawyer.env  real_sawyer.py  real_sawyer.robot.xml  real_sawyer.srdf  real_sawyer_arm.env  real_sawyer_arm.robot.xml  real_sawyer_arm_only.urdf  real_sawyer_urdf.xml  real_sawyer_urdf_rounded.xml  sawyer-orig.urdf  sawyer_arm_julian.urdf  sawyer_base_fred.srdf  sawyer_fred.urdf  sawyer_full_fred.srdf  sawyer_gripper_urdf.xml  sawyer_zero_right_hand_link.urdf  test.py  test_ik.py  test_real_sawyer_ik.py  test_sawyer_ik.py
sawyer_description_openrave/urdf/bullet/: sawyer.urdf  sawyer_base.srdf
sawyer_robot_openrave/: CMakeLists.txt  package.xml
