<?xml version="1.0"?>
<package>
  <name>sawyer_robot_openrave</name>
  <version>5.1.0</version>
  <description>
    sawyer_robot_openrave metapackage for all of the packages required 
    to work with the Sawyer Robot from Rethink Robotics.
  </description>

  <maintainer email="pgoebel@stanford.edu">
    Patrick Goebel
  </maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://sdk.rethinkrobotics.com/intera/</url>
  <url type="repository">
    https://github.com/RethinkRobotics/sawyer_robot
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/sawyer_robot/issues
  </url>
  <author>Rethink Robotics Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>intera_sdk</run_depend>
  <run_depend>intera_common</run_depend>
  <run_depend>sawyer_description_openrave</run_depend>
  
  <export>
    <metapackage/>
  </export>

</package>
